change name web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>#TYPICALSLEEPINGBOY STATUS</title>
+    <title>Status - Typicalsleepingboy</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="typ.css" />
     <link rel="icon" href="/image/myLogo.png" />
