--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     <div class="container">
       <h1>Typicalsleepingboy Status</h1>
       <div id="websiteList"></div>
-      <footer>Powered by ♥️ Typicalsleepingboy</footer>
+      <footer>
+        Powered by ♥️ Typicalsleepingboy
+        <div class="social-links">
+          <a href="https://github.com/your-github-username" target="_blank">
+            <img src="https://img.shields.io/badge/GitHub-000000?style=for-the-badge&logo=github&logoColor=white" alt="GitHub Logo" />
+          </a>
+          <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">
+            <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Logo" />
+          </a>
+        </div>
+      </footer>
     </div>
     <script src="/script page/typ.js"></script>
     <script src="/server/server.js"></script>
