--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="container">
       <h1>Typicalsleepingboy Status</h1>
       <div id="websiteList"></div>
-      <br>
-    </br>
-      <footer>
+       <footer>
         Powered by ♥️ Typicalsleepingboy
+        <br>
+        </br>
         <div class="social-links">
-          <a href="https://github.com/your-github-username" target="_blank">
+          <a href="https://github.com/Typicalsleepingboy" target="_blank">
             <img src="https://img.shields.io/badge/GitHub-000000?style=for-the-badge&logo=github&logoColor=white" alt="GitHub Logo" />
           </a>
-          <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">
+          <a href="https://www.linkedin.com/in/andi-muh-naufal-dzaky-1655b2272/" target="_blank">
             <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Logo" />
           </a>
         </div>
