--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="typ.css" />
     <link rel="icon" href="/image/myLogo.png" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  />
   </head>
   <body>
     <div id="overallStatus" class="overall-status"></div>
@@ -15,16 +19,21 @@
       <div id="websiteList"></div>
       <footer>
         Powered by ♥️ Typicalsleepingboy
-        <br>
-      </br>
-        <div class="social-links">
-          <a href="https://github.com/your-github-username" target="_blank">
-            <img src="https://img.shields.io/badge/GitHub-000000?style=for-the-badge&logo=github&logoColor=white" alt="GitHub Logo" />
-          </a>
-          <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">
-            <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Logo" />
-          </a>
-        </div>
+      <div class="social-icons">
+        <p>Lets Connect With Me</p>
+        <a
+          href="https://www.linkedin.com/in/andi-muh-naufal-dzaky-1655b2272/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/Typicalsleepingboy"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github"></i
+        ></a>
+      </div>
       </footer>
     </div>
     <script src="/script page/typ.js"></script>
