add weater menu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       </div>
       </footer>
     </div>
+    <div id="weatherInfo" class="weather-info">
     <script src="/script page/typ.js"></script>
     <script src="/server/server.js"></script>
   </body>
