--- a/index.html
+++ b/index.html
@@ -6,36 +6,34 @@
     <title>#Typicalsleepingboy - Status</title>
     <link rel="stylesheet" href="typ.css" />
     <link rel="icon" href="/image/myLogo.png" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
   </head>
   <body>
+    <h1>Typicalsleepingboy Status</h1>
     <div id="overallStatus" class="overall-status"></div>
     <div class="container">
-      <h1>Typicalsleepingboy Status</h1>
       <div id="websiteList"></div>
-      <footer>
-        Powered by ♥️ Typicalsleepingboy
-      <div class="social-icons">
-        <p>Lets Connect With Me</p>
-        <a
-          href="https://www.linkedin.com/in/andi-muh-naufal-dzaky-1655b2272/"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fab fa-linkedin"></i
-        ></a>
-        <a
-          href="https://github.com/Typicalsleepingboy"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fab fa-github"></i
-        ></a>
-      </div>
-      </footer>
     </div>
     <div id="weatherInfo" class="weather-info">
+    </div>
+    <footer>
+      Powered by ♥️ Typicalsleepingboy
+    <div class="social-icons">
+      <p>Lets Connect With Me</p>
+      <a
+        href="https://www.linkedin.com/in/andimuhnaufaldzaky/"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><i class="fab fa-linkedin"></i
+      ></a>
+      <a
+        href="https://github.com/Typicalsleepingboy"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><i class="fab fa-github"></i
+      ></a>
+    </div>
+    </footer>
     <script src="/script page/typ.js"></script>
     <script src="/server/server.js"></script>
   </body>
