add embed twitter dan delete code yang tidak berguna

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>#Typicalsleepingboy - Status</title>
     <link rel="stylesheet" href="typ.css" />
     <link rel="icon" href="/image/myLogo.png" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <h1>Typicalsleepingboy Status</h1>
@@ -14,25 +17,42 @@
     <div class="container">
       <div id="websiteList"></div>
     </div>
-    <div id="weatherInfo" class="weather-info">
+    <div id="weatherInfo" class="weather-info"></div>
+    <div class="twitter-container">
+      <div class="twitter-card">
+        <h2>Latest Tweets Sheng gue CinderEllak</h2>
+        <a
+          class="twitter-timeline"
+          data-width="450"
+          data-height="500"
+          data-theme="dark"
+          data-link-color="#888"
+          href="https://twitter.com/AM_EllaJKT48"
+        ></a>
+      </div>
+      <script
+        async
+        src="https://platform.twitter.com/widgets.js"
+        charset="utf-8"
+      ></script>
     </div>
     <footer>
       Powered by ♥️ Typicalsleepingboy
-    <div class="social-icons">
-      <p>Lets Connect With Me</p>
-      <a
-        href="https://www.linkedin.com/in/andimuhnaufaldzaky/"
-        target="_blank"
-        rel="noopener noreferrer"
-        ><i class="fab fa-linkedin"></i
-      ></a>
-      <a
-        href="https://github.com/Typicalsleepingboy"
-        target="_blank"
-        rel="noopener noreferrer"
-        ><i class="fab fa-github"></i
-      ></a>
-    </div>
+      <div class="social-icons">
+        <p>Lets Connect With Me</p>
+        <a
+          href="https://www.linkedin.com/in/andimuhnaufaldzaky/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/Typicalsleepingboy"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github"></i
+        ></a>
+      </div>
     </footer>
     <script src="/script page/typ.js"></script>
     <script src="/server/server.js"></script>
