--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="overallStatus" class="overall-status"></div>
     <div class="container">
       <div id="websiteList"></div>
+      <p>NOTE : Data akan update terus ketika ada website yang offline atau online maka data tersebut akan dikirim ke discord https://discord.gg/xs4w3fDDfw</p>
     </div>
     <div id="weatherInfo" class="weather-info"></div>
     <div class="twitter-container">
