add embed instagram anda fix delete loading website to origin and fix notification discord

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
+
   <body>
     <h1>Typicalsleepingboy Status</h1>
     <div id="overallStatus" class="overall-status"></div>
     <div class="container">
       <div id="websiteList"></div>
-      <p>NOTE : Data akan update terus ketika ada website yang offline atau online maka data tersebut akan dikirim ke discord https://discord.gg/xs4w3fDDfw</p>
+      <p>
+        NOTE : Data akan update terus ketika ada website yang offline atau
+        online maka data tersebut akan dikirim ke discord
+        https://discord.gg/xs4w3fDDfw
+      </p>
     </div>
     <div id="weatherInfo" class="weather-info"></div>
     <div class="twitter-container">
@@ -24,16 +29,18 @@
         <h2>Latest Tweets Sheng gue CinderEllak</h2>
         <a
           class="twitter-timeline"
-          data-theme="dark"
+          data-theme="light"
           data-height="650"
           href="https://twitter.com/AM_EllaJKT48"
         ></a>
       </div>
-      <script
-        async
-        src="https://platform.twitter.com/widgets.js"
-        charset="utf-8"
-      ></script>
+    </div>
+    <div class="instagram-card">
+      <h2>Latest Instagram Posts Sheng gue CinderEllak</h2>
+      <div
+        class="elfsight-app-777a6dde-9531-4b88-b672-aeaf0ca829b0"
+        data-elfsight-app-lazy
+      ></div>
     </div>
     <footer>
       Powered by ♥️ Typicalsleepingboy
@@ -55,5 +62,15 @@
     </footer>
     <script src="/script page/typ.js"></script>
     <script src="/server/server.js"></script>
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
+    <script
+      src="https://static.elfsight.com/platform/platform.js"
+      data-use-service-core
+      defer
+    ></script>
   </body>
 </html>
