--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       </div>
     </footer>
     <script src="/script page/typ.js"></script>
+    <script src="/script page/NotifDiscord.js"></script>
     <script src="/server/server.js"></script>
     <script
       async
